fixed some layout issues

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -80,10 +80,11 @@ h1, h2, h3, h4 {
   margin: auto;
 }
 
-.messageList {
+.message-list {
   width: 100%;
   height: 80%;
   overflow: auto;
+  position: relative;
 }
 
 .message-container {
@@ -91,19 +92,27 @@ h1, h2, h3, h4 {
   background-color: white;
   border-radius: 10px !important;
   margin: 1% 20%;
+  z-index: 5;
 }
 
-.body::before {
-  content: " ";
-  opacity: 0.5;
+.logo-container {
+  width: 100%;
+  height: 85vh;
   top: 0;
   left: 0;
-  bottom: 15vh;
+  bottom: 50%;
   right: 0;
   position: absolute;
-  z-index: 1;   
+  z-index: 0;
+  display: grid;
+  align-items: center;
+  place-items: center;
+  justify-items: center;
   pointer-events: none;
-  background: url("images/icon.png") center no-repeat;
+}
+
+.logo-container img {
+  opacity: 0.5;
 }
 
 .footer {
@@ -147,16 +156,16 @@ h1, h2, h3, h4 {
 }
 
 .bot-message {
-  margin-left: 3%;
-  padding: 10px 20px;
+  margin-left: 3vh;
+  padding: 10px 25px;
   background-color: #ffab73;
   border-radius: 20px;
   display: inline-block;
 }
 
 .human-message {
-  margin-right: 3%;
-  padding: 10px 20px;
+  margin-right: 3vh;
+  padding: 10px 25px;
   background-color: #d3e0ea;
   border-radius: 20px;
   text-align: right;
